--- a/appengine/flexible/hello_world_django/requirements.txt
+++ b/appengine/flexible/hello_world_django/requirements.txt
@@ -1,2 +1,6 @@
-Django==1.11.4
 gunicorn==19.7.1
+google-gax
+google-cloud-logging==1.3.0
+google-cloud-pubsub==0.28.2
+Django==1.11.4
+requests==2.18.4
